<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <!-- Vinyl image -->
    <ImageView
        android:id="@+id/vinylImage"
        android:layout_width="371dp"
        android:layout_height="367dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-159dp"
        android:layout_marginEnd="-154dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/HU00_title"
        android:scaleType="centerCrop"
        android:src="@drawable/vinyl" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb"
        android:scrollbarTrackVertical="@drawable/custom_scrollbar_track"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:layout_width="150dp"
                android:layout_height="36dp"
                android:orientation="vertical"
                android:layout_marginTop="30sp">

            <!-- Botón de Volver -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/goBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/red_button_background"
                    android:fontFamily="@font/roboto_condensed_medium"
                    android:padding="0dp"
                    android:text="@string/go_back_button"
                    android:textSize="16sp"
                    style="@style/RedButtonStyle"/>
            </LinearLayout>

            <!-- Nombre del Artista -->
            <TextView
                android:id="@+id/artistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAllCaps="true"
                android:textSize="34sp" />

            <!-- Fecha de Nacimiento -->
            <TextView
                android:id="@+id/birthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">


                <!-- Imagen del artista-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/orange"
                    app:cardCornerRadius="0dp"
                    android:elevation="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardBackgroundColor="@color/background_color">
                    <ImageView
                        android:id="@+id/artistImage"
                        android:layout_width="210dp"
                        android:layout_height="210dp"
                        android:scaleType="centerCrop"
                        android:src="@android:drawable/ic_menu_gallery"
                        android:contentDescription="@string/portada_artista"
                        tools:ignore="ContentDescription" />
                </com.google.android.material.card.MaterialCardView>

                <!-- Descripción -->
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:gravity="center"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:paddingBottom="10dp"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textColor="@color/white" />

                <!-- Add Album Button -->
                <Button
                    android:id="@+id/addAlbumButton"
                    android:layout_width="152dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="0dp"
                    android:background="@drawable/black_button_background"
                    android:fontFamily="@font/roboto_condensed_medium"
                    android:text="@string/button_add_album_artist"
                    android:textSize="12sp"
                    android:layout_gravity="start"
                    style="?attr/buttonStyle"/>

                <!-- Divider Line -->
                <View
                    android:id="@+id/horizontal_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <!-- Table header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/albumsId"
                        android:text="@string/id_tracks_table"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="1dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/albums_title"
                        android:text="@string/album_title_header"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/black" />


                </LinearLayout>

                <!-- Divider -->
                <View
                    android:id="@+id/horizontal_line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <!-- RecyclerView to show list of albums -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/album_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
