...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <!-- Lista de coleccionistas -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collectorsRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/progressBar"
                android:layout_below="@id/addCollectorButton"
                tools:listitem="@layout/collector_item" />

...
